--- a/index.htm
+++ b/index.htm
@@ -1,17 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weatherly</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-</head>
-<body>
-    <h1>Weatherly</h1>
-
-    <!-- <div>Logo made by <a href="https://www.designevo.com/" title="Free Online Logo Maker">DesignEvo free logo creator</a>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
+    <header>
+      <h3>Weatherly</h3>
+      <div class="hero">
+        <h1>welcome! How's the sky looking today?</h1>
+        <div class="search-box">
+          <input type="search" placeholder="search for a place... " />
+          <button>Search</button>
+        </div>
+      </div>
+    </header>
+    <main class="cpntainer">
+      <section class="">
+        <div class="main-card">
+          <div>
+            <h2>Berlin, Germany</h2>
+            <p>Tuesday,Aug 5, 2025</p>
+          </div>
+          <div class="temp">
+            <img src="assets/images/icon-sunny.webp" alt="" />
+            20
+          </div>
+        </div>
+        <div class="Stats">
+          <div class="stat">
+            <p>Feels Like</p>
+            <h3>18</h3>
+          </div>
+          <div class="stat">
+            <p>Humidity</p>
+            <h3>46%</h3>
+          </div>
+          <div class="stat">
+            <p>Wind</p>
+            <h3>14 km/h</h3>
+          </div>
+          <div class="stat">
+            <p>Precipitation</p>
+            <h3>0 mm</h3>
+          </div>
+        </div>
+        <h3 class="section-title">Daily Forecast</h3>
+        <div class="day">
+          <p>Tue</p>
+          <img src="assets/images/icon-rain.webp" alt="" />
+          <div>
+            <p>20</p>
+            <p>14</p>
+          </div>
+        </div>
+        <div class="day">
+          <p>Wed</p>
+          <img src="assets/images/icon-drizzle.webp" alt="" />
+          <div>
+            <p>21</p>
+            <p>15</p>
+          </div>
+        </div>
+        <div class="day">
+          <p>Thu</p>
+          <img src="assets/images/icon-sunny.webp" alt="" />
+          <div>
+            <p>24</p>
+            <p>14</p>
+          </div>
+        </div>
+        <div class="day">
+          <p>Fri</p>
+          <img src="assets/images/icon-partly-cloudy.webp" alt="" />
+          <div>
+            <p>25</p>
+            <p>13</p>
+          </div>
+        </div>
+        <div class="day">
+          <p>Sat</p>
+          <img src="assets/images/icon-storm.webp" alt="" />
+          <div>
+            <p>21</p>
+            <p>15</p>
+          </div>
+        </div>
+        <div class="day">
+          <p>Sun</p>
+          <img src="assets/images/icon-snow.webp" alt="" />
+          <div>
+            <p>25</p>
+            <p>16</p>
+          </div>
+        </div>
+        <div class="day">
+          <p>Mon</p>
+          <img src="assets/images/icon-fog.webp" alt="" />
+          <div>
+            <p>24</p>
+            <p>15</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- <div>
+      Logo made by
+      <a href="https://www.designevo.com/" title="Free Online Logo Maker"
+        >DesignEvo free logo creator</a
+      >
     </div> -->
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
