--- a/index.htm
+++ b/index.htm
@@ -12,101 +12,109 @@
     />
   </head>
   <body>
-    <header>
+    <header class="head">
       <h3>Weatherly</h3>
-      <div class="hero">
-        <h1>welcome! How's the sky looking today?</h1>
+      <div class="main-title">
+        <h1>Welcome! How's the sky looking today?</h1>
         <div class="search-box">
           <input type="search" placeholder="search for a place... " />
           <button>Search</button>
         </div>
       </div>
     </header>
-    <main class="cpntainer">
-      <section class="">
-        <div class="main-card">
+    <main>
+      <section class="main-weather-card">
+        <div class="location">
           <div>
             <h2>Berlin, Germany</h2>
             <p>Tuesday,Aug 5, 2025</p>
           </div>
           <div class="temp">
+            <img src="assets/images/icon-sunny.webp" alt="" /
+            class="weather-icon">
+            <span>20</span>
+          </div>
+        </div>
+      </section>
+
+      <div class="weather-info-grid">
+        <div class="info-box">
+          <p>Feels Like</p>
+          <h3>18</h3>
+        </div>
+        <div class="info-box">
+          <p>Humidity</p>
+          <h3>46%</h3>
+        </div>
+        <div class="info-box">
+          <p>Wind</p>
+          <h3>14 km/h</h3>
+        </div>
+        <div class="info-box">
+          <p>Precipitation</p>
+          <h3>0 mm</h3>
+        </div>
+      </div>
+
+      <section class="daily-forecast">
+        <h2>Daily Forecast</h2>
+
+        <div class="day-cards">
+          <div class="day">
+            <p>Tue</p>
+            <img src="assets/images/icon-rain.webp" alt="" />
+            <div class="temp-numbers">
+              <p>20</p>
+              <p>14</p>
+            </div>
+          </div>
+          <div class="day">
+            <p>Wed</p>
+            <img src="assets/images/icon-drizzle.webp" alt="" />
+            <div class="temp-numbers">
+              <p>21</p>
+              <p>15</p>
+            </div>
+          </div>
+          <div class="day">
+            <p>Thu</p>
             <img src="assets/images/icon-sunny.webp" alt="" />
-            20
+            <div class="temp-numbers">
+              <p>24</p>
+              <p>14</p>
+            </div>
           </div>
-        </div>
-        <div class="Stats">
-          <div class="stat">
-            <p>Feels Like</p>
-            <h3>18</h3>
+          <div class="day">
+            <p>Fri</p>
+            <img src="assets/images/icon-partly-cloudy.webp" alt="" />
+            <div class="temp-numbers">
+              <p>25</p>
+              <p>13</p>
+            </div>
           </div>
-          <div class="stat">
-            <p>Humidity</p>
-            <h3>46%</h3>
+          <div class="day">
+            <p>Sat</p>
+            <img src="assets/images/icon-storm.webp" alt="" />
+            <div class="temp-numbers">
+              <p>21</p>
+              <p>15</p>
+            </div>
           </div>
-          <div class="stat">
-            <p>Wind</p>
-            <h3>14 km/h</h3>
+          <div class="day">
+            <p>Sun</p>
+            <img src="assets/images/icon-snow.webp" alt="" />
+            <div class="temp-numbers">
+              <p>25</p>
+              <p>16</p>
+            </div>
           </div>
-          <div class="stat">
-            <p>Precipitation</p>
-            <h3>0 mm</h3>
-          </div>
-        </div>
-        <h3 class="section-title">Daily Forecast</h3>
-        <div class="day">
-          <p>Tue</p>
-          <img src="assets/images/icon-rain.webp" alt="" />
-          <div>
-            <p>20</p>
-            <p>14</p>
-          </div>
-        </div>
-        <div class="day">
-          <p>Wed</p>
-          <img src="assets/images/icon-drizzle.webp" alt="" />
-          <div>
-            <p>21</p>
-            <p>15</p>
-          </div>
-        </div>
-        <div class="day">
-          <p>Thu</p>
-          <img src="assets/images/icon-sunny.webp" alt="" />
-          <div>
-            <p>24</p>
-            <p>14</p>
-          </div>
-        </div>
-        <div class="day">
-          <p>Fri</p>
-          <img src="assets/images/icon-partly-cloudy.webp" alt="" />
-          <div>
-            <p>25</p>
-            <p>13</p>
-          </div>
-        </div>
-        <div class="day">
-          <p>Sat</p>
-          <img src="assets/images/icon-storm.webp" alt="" />
-          <div>
-            <p>21</p>
-            <p>15</p>
-          </div>
-        </div>
-        <div class="day">
-          <p>Sun</p>
-          <img src="assets/images/icon-snow.webp" alt="" />
-          <div>
-            <p>25</p>
-            <p>16</p>
-          </div>
-        </div>
-        <div class="day">
-          <p>Mon</p>
-          <img src="assets/images/icon-fog.webp" alt="" />
-          <div>
-            <p>24</p>
-            <p>15</p>
+          <div class="day">
+            <p>Mon</p>
+            <img src="assets/images/icon-fog.webp" alt="" />
+            <div class="temp-numbers">
+              <p>24</p>
+              <p>15</p>
+            </div>
           </div>
         </div>
       </section>
